@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amindexd.c,v 1.39.2.3 1999/02/15 02:31:01 martinea Exp $
+ * $Id: amindexd.c,v 1.39.2.4 1999/05/23 01:51:46 martinea Exp $
  *
  * This is the server daemon part of the index client/server system.
  * It is assumed that this is launched from inetd instead of being
@@ -330,7 +330,8 @@ char *host;
 
     /* check that the config actually handles that host */
     /* assume in index dir already */
-    if (stat (host, &dir_stat) != 0 || !S_ISDIR(dir_stat.st_mode))
+    if (stat (sanitise_filename(host), &dir_stat) != 0 || 
+        !S_ISDIR(dir_stat.st_mode))
     {
 	reply(501, "No index records for host: %s. Invalid?", host);
 	return -1;
